--- a/coursera/practicalMachineLearning/Quiz3.Rmd
+++ b/coursera/practicalMachineLearning/Quiz3.Rmd
@@ -19,23 +19,14 @@ Load the cell segmentation data from the AppliedPredictiveModeling package using
 
 
 ```{r, echo=FALSE}
-  sessionInfo()
-  #head(segmentationOriginal,2)
-  names(segmentationOriginal)
-  training = segmentationOriginal[segmentationOriginal$Case=="Train", ]
-  testing = segmentationOriginal[segmentationOriginal$Case=="Test", ]
+  data.train = segmentationOriginal[segmentationOriginal$Case=="Train", ]
+  data.test = segmentationOriginal[segmentationOriginal$Case=="Test", ]
   set.seed(125)
-  rpartFit<-rpart(Class ~ .,data=training)
-  printcp(rpartFit) # display the results 
-  plotcp(rpartFit) # visualize cross-validation results 
-  #summary(rpartFit) # detailed summary of splits
-
+  #Classification And Regression Tree (CART) with rpart
+  model.Rpart<-train(Class ~ .,data=data.train, method="rpart")
   # plot tree 
-  plot(rpartFit, uniform=TRUE, 
-    main="Classification Tree for Case")
-  text(rpartFit, use.n=TRUE, all=TRUE, cex=.8)
-  newdata.example <- make.obs(c(TotalIntenStatusCh3 = 3, FiberWidthCh1 = 20, VarIntenCh4 = 100))
-  predict(rpartFit, newdata=newdata.example)
+  plot(model.Rpart$finalModel, uniform=T)
+  text(model.Rpart$finalModel, cex=0.8)
 ```
 
 3. In the final model what would be the final model prediction for cases with the following variable values:
@@ -44,3 +35,76 @@ b. TotalIntench2 = 50,000; FiberWidthCh1 = 10;VarIntenCh4 = 100
 c. TotalIntench2 = 57,000; FiberWidthCh1 = 8;VarIntenCh4 = 100 
 d. FiberWidthCh1 = 8;VarIntenCh4 = 100; PerimStatusCh1=2 
 
+--> 
+a. PS 
+b. WS 
+c. PS
+d. Not possible to predict 
+
+Question 2
+If K is small in a K-fold cross validation is the bias in the estimate of out-of-sample (test set) accuracy smaller or bigger? If K is small is the variance in the estimate of out-of-sample (test set) accuracy smaller or bigger. Is K large or small in leave one out cross validation?
+The bias is larger and the variance is smaller. Under leave one out cross validation K is equal to one.
+--> CrossValidation Videao 8.20
+The bias is larger and the variance is smaller. Under leave one out cross validation K is equal to the sample size.
+
+Question 3
+Load the olive oil data using the commands:
+
+library(pgmm)
+data(olive)
+olive = olive[,-1]
+(NOTE: If you have trouble installing the pgmm package, you can download the olive dataset here: olive_data.zip. After unzipping the archive, you can load the file using the load() function in R.)
+These data contain information on 572 different Italian olive oils from multiple regions in Italy. Fit a classification tree where Area is the outcome variable. Then predict the value of area for the following data frame using the tree command with all defaults
+
+ rpart1 <- rpart(Area ~ ., data = olive)
+ newdata = as.data.frame(t(colMeans(olive)))
+ predict(rpart1,newdata=newdata)
+ What is the resulting prediction? Is the resulting prediction strange? Why or why not?
+ 
+ 2.783. It is strange because Area should be a qualitative variable - but tree is reporting the average value of Area as a numeric variable in the leaf predicted for newdata
+
+Question 4
+Load the South Africa Heart Disease Data and create training and test sets with the following code:
+library(ElemStatLearn)
+data(SAheart)
+set.seed(8484)
+train = sample(1:dim(SAheart)[1],size=dim(SAheart)[1]/2,replace=F)
+trainSA = SAheart[train,]
+testSA = SAheart[-train,]
+set.seed(13234)
+Then set the seed to 13234 and fit a logistic regression model (method="glm", be sure to specify family="binomial") with Coronary Heart Disease (chd) as the outcome and age at onset, current alcohol consumption, obesity levels, cumulative tabacco, type-A behavior, and low density lipoprotein cholesterol as predictors. Calculate the misclassification rate for your model using this function and a prediction on the "response" scale:
+
+ logModel <- train(chd ~ age+alcohol+obesity+tobacco+typea + ldl, 
+        data = trainSA,method="glm",family="binomial")
+ missClass <- function(values,prediction){sum(((prediction > 0.5)*1) != values)/length(values)}
+predictTrain <- predict(logModel, trainSA)
+predictTest <- predict(logModel, testSA)
+# Test Set Misclassification rate
+missClass(testSA$chd, predictTest)
+# 0.3116883
+# Training Set Misclassification rate
+missClass(trainSA$chd, predictTrain) 
+# 0.2727273
+
+Quetion 5
+Load the vowel.train and vowel.test data sets:
+library(ElemStatLearn)
+data(vowel.train)
+data(vowel.test) 
+Set the variable y to be a factor variable in both the training and test set. Then set the seed to 33833. Fit a random forest predictor relating the factor variable y to the remaining variables. Read about variable importance in random forests here: http://www.stat.berkeley.edu/~breiman/RandomForests/cc_home.htm#ooberr The caret package uses by defualt the Gini importance. Calculate the variable importance using the varImp function in the caret package. What is the order of variable importance?
+
+library(ElemStatLearn)
+data(vowel.train)
+data(vowel.test)
+head(vowel.train)
+head(vowel.test)
+dim(vowel.train) # 528  11
+dim(vowel.test) # 462  11
+vowel.train$y <- as.factor(vowel.train$y)
+vowel.test$y <- as.factor(vowel.test$y)
+set.seed(33833)
+modelRf <- randomForest(y ~ ., data = vowel.train, importance = FALSE)
+order(varImp(modelRf), decreasing=T)
+#  x.2, x.1, x.5, x.6, x.8, x.4, x.9, x.3, x.7,x.10
+ 
+ 
